# video_editor

./: .env.example  .gitignore  PROJECT_STATE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: pyproject.toml  requirements-dev.txt  requirements.txt
apps/backend/bombvid/bombtest1/: project.json
apps/backend/montage_backend/: __init__.py  config.py  database.py  database_migrations.py  logging.py  main.py
apps/backend/montage_backend/analysis/: __init__.py  audio_analysis.py  base.py  clip_analysis_aggregation.py  embedding_analysis.py  motion_analysis.py  object_analysis.py  ocr_analysis.py  registry.py  runtime.py  scene_detection.py
apps/backend/montage_backend/api/: deps.py  exception_handlers.py  middleware.py  router.py
apps/backend/montage_backend/jobs/: analysis_queue.py  import_queue.py
apps/backend/montage_backend/media/: cache.py  ffmpeg_runner.py  ffmpeg_tools.py  hash.py  paths.py  processor.py
apps/backend/montage_backend/metadata/: extractor.py
apps/backend/montage_backend/montage/: __init__.py  base.py  clip_scoring.py  draft_generator.py  effects_engine.py  feedback_engine.py  highlight_detection.py  music_sync.py  pacing_engine.py  registry.py  timeline_generator.py  transition_engine.py
apps/backend/montage_backend/playback/: playback_service.py
apps/backend/montage_backend/render/: encoder.py  graph_builder.py  presets.py
apps/backend/montage_backend/repositories/: analysis_repo.py  clip_analysis_repo.py  clip_highlight_repo.py  clip_score_repo.py  embedding_repo.py  (+12 more)
apps/backend/tests/: conftest.py
(+294 files in other folders)
